[package]
name = "lua_runner_wasm"
version = "0.1.0"
edition = "2021"


[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "lua_runner"
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]
